snapshots/aws_demo/aws_configs/us-west-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0529aa748aef97171",
     "NetworkAclId": "acl-0b8c1feb3d4a5b0f3",
     "SubnetId": "subnet-00dea5af4751f34df"
    },
    {
     "NetworkAclAssociationId": "aclassoc-092e3ab6996a6112d",
     "NetworkAclId": "acl-0b8c1feb3d4a5b0f3",
     "SubnetId": "subnet-09679046fbafaef47"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "10.4.1.100/32",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 20
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0b8c1feb3d4a5b0f3",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-hr-west"
    }
   ],
   "VpcId": "vpc-0e13049ea0263d087"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0004b18aed859c9b5",
     "NetworkAclId": "acl-0d912c19d5bc7b4fa",
     "SubnetId": "subnet-016dc7c693bbf7138"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-0d912c19d5bc7b4fa",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-it-west"
    }
   ],
   "VpcId": "vpc-080faa5fa52c458dc"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0e9fa0a34a26b2c3b",
     "NetworkAclId": "acl-09f647e442a74d373",
     "SubnetId": "subnet-0f322dd9391a87342"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-09f647e442a74d373",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-tgw-hr-west"
    }
   ],
   "VpcId": "vpc-0e13049ea0263d087"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-00b22befeb7251f07",
     "NetworkAclId": "acl-00f390a3eac479e4a",
     "SubnetId": "subnet-0f2817602d9c9b15a"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-00f390a3eac479e4a",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-0e13049ea0263d087"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0c8d37943e85aa60b",
     "NetworkAclId": "acl-035d8e2447e2d092e",
     "SubnetId": "subnet-024ceee6a0375a8c5"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 10
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-035d8e2447e2d092e",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "nacl-it-west"
    }
   ],
   "VpcId": "vpc-080faa5fa52c458dc"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-01b5d65f3583c44cf",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-080faa5fa52c458dc"
  }
 ]
}
